# wabbajack

./: ';w  .editorconfig  .gitignore  .gitmodules  .runsettings  ;  CHANGELOG.md  CONTRIBUTING.md  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  LICENSE.txt  NexusPage.html  README.md  RECIPES.md  Settings.XamlStyler  Wabbajack.sln  Wabbajack.sln.DotSettings  azure-list-validation.yml  azure-pipelines-1.yml  azure-pipelines.yml  buildall.bat  codeconv.yml  global.json  nuget.config  release.ps1
.github/: FUNDING.yml  dependabot.yml
BSA-speedtest/: BSA-speedtest.csproj  Program.cs
BSA.Tools/: Archive.cs  BSA.Tools.csproj  BSAFile.cs  Extensions.cs  libbsarch.cs
Compression.BSA/: BA2Builder.cs  BA2Reader.cs  BSABuilder.cs  BSADispatch.cs  BSAReader.cs  Compression.BSA.csproj  Compression.BSA.xml  DDS.cs  IBSAReader.cs  MemoryStreamFactory.cs  StreamView.cs  TES3Builder.cs  TES3Reader.cs  Utils.cs  packages.config
Compression.BSA.Test/: BSATests.cs  Compression.BSA.Test.csproj  Program.cs  UnitTests.cs  packages.config
OMODExtraction/: Utils.cs
OMODExtractor/: CompressionHandler.cs  Framework.cs  LICENSE.txt  OMOD.cs  OMODExtractor.csproj
SevenZipExtractor/: ArchiveFile.cs  Entry.cs  SevenZipExtractor.csproj  SevenZipExtractor.nuspec  SevenZipExtractor.targets  SevenZipInterface.cs
VS Snippets/: guiprop.snippet  guiproprx.snippet
VirtualFileSystem.Test/: App.config  Program.cs  (+1 more)
Wabbajack.App/src-tauri/: Cargo.toml  tauri.conf.json
Wabbajack.App/src-tauri/capabilities/: default.json
Wabbajack.App/src-tauri/src/: lib.rs  main.rs
(+2867 files in other folders)
