[package]
name = "wabbajack-app"
version = "0.0.0"
description = "Wabbajack Desktop Application"
authors = ["Wabbajack Team"]
license = "GPL-3.0"
repository = ""
edition = "2021"

[lib]
name = "wabbajack_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
